--- a/index.html
+++ b/index.html
@@ -49,14 +49,38 @@
                 <p data-translate="project1_desc">Um sistema de chamados para atribuição de tarefas a usuários, com autenticação via JWT. Desenvolvido com Node.js, Express e Prisma.</p>
                 <p><a href="https://github.com/erickalvespx/Sistema-de-tarefas" target="_blank" rel="noopener noreferrer" data-translate="project1_link">Ver no GitHub</a></p>
             </article>
-            <!-- Artigo do Projeto 2 -->
+            <!-- Artigo do Projeto 3 -->
             <article class="reveal">
-                <h2 data-translate="project2_title">website-react-portfolio</h2>
-                <p data-translate="project2_desc">Meu portfólio pessoal desenvolvido com React, utilizando componentes estilizados e animações para uma experiência de usuário fluida.</p>
-                <p><a href="#" target="_blank" rel="noopener noreferrer" data-translate="project2_link">Ver projeto</a></p>
+                <h2 data-translate="project3_title">Meu-portf-lio</h2>
+                <p data-translate="project3_desc">O código-fonte deste portfólio. Construído com HTML, CSS e JavaScript para criar uma experiência de usuário limpa e responsiva.</p>
+                <p><a href="https://github.com/erickalvespx/Meu-portf-lio" target="_blank" rel="noopener noreferrer" data-translate="project3_link">Ver no GitHub</a></p>
             </article>
         </section>
     </main>
+
+    <!-- Seção de Contato com formulário -->
+    <section id="contact" class="reveal">
+        <h2 data-translate="contact_title">Contato</h2>
+        <!-- 
+            INSTRUÇÃO: Para receber os e-mails do formulário, crie uma conta no https://formspree.io/, 
+            crie um novo formulário e substitua a URL abaixo pela URL do seu formulário.
+        -->
+        <form id="contact-form" action="https://formspree.io/f/manvdnpj" method="POST">
+            <div class="form-group">
+                <label for="name" data-translate="contact_name">Nome</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="email" data-translate="contact_email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="message" data-translate="contact_message">Mensagem</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+            </div>
+            <button type="submit" data-translate="contact_submit">Enviar Mensagem</button>
+        </form>
+    </section>
 
     <!-- Rodapé com informações e controles -->
     <footer class="footer">
