Atualizar o index.html
Modificação do texto de Sobre mim

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- Título e biografia traduzíveis -->
             <h2 data-translate="about_me_title">Sobre Mim</h2>
             <p data-translate="about_me_bio">
-                Desenvolvedor de software apaixonado por criar soluções inovadoras e eficientes. Com experiência em desenvolvimento web full-stack, estou sempre em busca de novos desafios e aprendizados para aprimorar minhas habilidades.
+                Desenvolvedor de software apaixonado por criar soluções inovadoras e eficientes. Com experiência em desenvolvimento web front-end, estou sempre em busca de novos desafios e aprendizados para aprimorar minhas habilidades.
             </p>
         </div>
     </section>
