--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1><a href="index.html">Erick Alves</a></h1>
         <!-- Subtítulo com efeito de digitação -->
-        <p data-translate="header_subtitle">Saiba um pouco sobre mim e veja alguns projetos</p>
+        <p data-translate="header_subtitle">Perfil profissional e portfólio de projetos</p>
     </header>
 
     <!-- Seção "Sobre Mim" com animação de surgimento -->
@@ -19,7 +19,7 @@
         <img src="https://github.com/erickalvespx.png" alt="Foto de Erick Alves" class="profile-pic">
         <div class="bio-text">
             <!-- Título e biografia traduzíveis -->
-            <h2 data-translate="about_me_title">Sobre Mim</h2>
+            <h2 data-translate="about_me_title">Conheça um pouco mais</h2>
             <p data-translate="about_me_bio">
                 Desenvolvedor de software apaixonado por criar soluções inovadoras e eficientes. Com experiência em desenvolvimento web front-end, estou sempre em busca de novos desafios e aprendizados para aprimorar minhas habilidades.
             </p>
@@ -119,3 +119,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
