Revise index.html for content and functionality updates
Updated the portfolio page content and structure, including improved project descriptions and added functionality for theme and language selection.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1><a href="index.html">Erick Alves</a></h1>
         <!-- Subtítulo com efeito de digitação -->
-        <p data-translate="header_subtitle">Perfil profissional e portfólio de projetos</p>
+        <p data-translate="header_subtitle">Perfil profissional, portfólio de projetos e entrega de resultados</p>
     </header>
 
     <!-- Seção "Sobre Mim" com animação de surgimento -->
@@ -119,4 +119,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
