Add Git skill and new project descriptions to portfolio

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div class="skill-item"><span data-translate="skill_react">React</span><div class="progress-bar"><div class="progress-bar-fill" data-progress="85%"></div></div></div>
             <div class="skill-item"><span data-translate="skill_node">Node.js</span><div class="progress-bar"><div class="progress-bar-fill" data-progress="80%"></div></div></div>
             <div class="skill-item"><span data-translate="skill_sql">SQL</span><div class="progress-bar"><div class="progress-bar-fill" data-progress="65%"></div></div></div>
+            <div class="skill-item"><span data-translate="skill_git">Git</span><div class="progress-bar"><div class="progress-bar-fill" data-progress="88%"></div></div></div>
         </div>
     </section>
 
@@ -49,11 +50,23 @@
                 <p data-translate="project1_desc">Um sistema de chamados para atribuição de tarefas a usuários, com autenticação via JWT. Desenvolvido com Node.js, Express e Prisma.</p>
                 <p><a href="https://github.com/erickalvespx/Sistema-de-tarefas" target="_blank" rel="noopener noreferrer" data-translate="project1_link">Ver no GitHub</a></p>
             </article>
+            <!-- Artigo do Projeto 2 -->
+            <article class="reveal">
+                <h2 data-translate="project2_title">CineStream</h2>
+                <p data-translate="project2_desc">Uma plataforma de streaming de filmes e séries, permitindo aos usuários pesquisar, assistir a trailers e organizar seus favoritos. Desenvolvido com React, consumindo a API do The Movie Database (TMDb).</p>
+                <p><a href="https://github.com/erickalvespx/cineStream" target="_blank" rel="noopener noreferrer" data-translate="project2_link">Ver no GitHub</a></p>
+            </article>
             <!-- Artigo do Projeto 3 -->
             <article class="reveal">
                 <h2 data-translate="project3_title">Meu-portf-lio</h2>
                 <p data-translate="project3_desc">O código-fonte deste portfólio. Construído com HTML, CSS e JavaScript para criar uma experiência de usuário limpa e responsiva.</p>
                 <p><a href="https://github.com/erickalvespx/Meu-portf-lio" target="_blank" rel="noopener noreferrer" data-translate="project3_link">Ver no GitHub</a></p>
+            </article>
+            <!-- Artigo do Projeto 4 -->
+            <article class="reveal">
+                <h2 data-translate="project4_title">projetoConversa--o</h2>
+                <p data-translate="project4_desc">Um aplicativo de conversão de moedas que permite aos usuários verificar as taxas de câmbio mais recentes e converter valores entre diferentes moedas. Construído com HTML, CSS e JavaScript, utilizando uma API de taxas de câmbio.</p>
+                <p><a href="https://github.com/erickalvespx/projetoConversa--o" target="_blank" rel="noopener noreferrer" data-translate="project4_link">Ver no GitHub</a></p>
             </article>
         </section>
     </main>
@@ -119,5 +132,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
